--- a/my_style.css
+++ b/my_style.css
@@ -11,7 +11,7 @@ header{
     background-color: #1abc9c;
 }
 
-section.jumbotron h5{
+section.jumbotron h3{
     font-size:15px;
 }
 
@@ -19,10 +19,19 @@ button{
     border: 1px solid white;
 }
 
+.contact-me{
+    height: 400px;
+    background-color:greenyellow;
+}
+
+footer{
+    background-color: #3a546d;
+}
+
 /*MEDIA QUERY*/
 
 @media screen and (min-width:576px) {
-    section.jumbotron h5 {
+    section.jumbotron h3 {
         font-size: 18px;
     }
 
@@ -32,7 +41,7 @@ button{
 }
 
 @media screen and (min-width:768px) {
-    section.jumbotron h5 {
+    section.jumbotron h3 {
         font-size: 19px;
     }
 
